<resources>
    <string name="app_name">FirstTryapp</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="username">用户名:</string>
    <string name="hint">请输入用户名</string>
    <string name="password">密码:</string>
    <string name="hint2">请输入密码</string>
    <string name="学生">学生</string>
    <string name="老师">老师</string>
    <string name="社团">社团</string>
    <string name="管理者">管理者</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
</resources>
